# st0x-rest-api

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  flake.nix  prep.sh
.github/workflows/: ci.yaml
migrations/: 20260212000000_create_api_keys.sql  20260213000000_create_usage_logs.sql
src/: auth.rs  catchers.rs  cli.rs  error.rs  main.rs  telemetry.rs  test_helpers.rs
src/db/: migrate.rs  mod.rs  pool.rs
src/fairings/: mod.rs  rate_limiter.rs  request_logger.rs  usage_logger.rs
src/routes/: health.rs  mod.rs  order.rs  orders.rs  swap.rs  tokens.rs  trades.rs
src/types/: common.rs  health.rs  mod.rs  order.rs  orders.rs  swap.rs  tokens.rs  trades.rs
