[package]
name = "st0x_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9", features = ["rocket"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.0.9", default-features = false, features = ["std", "serde"] }
rain_orderbook_common = { path = "lib/rain.orderbook/crates/common" }
rain_orderbook_js_api = { path = "lib/rain.orderbook/crates/js_api" }
dotenvy = "0.15"
